--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajha-fpj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajha-fpj.html
@@ -24,10 +24,11 @@ Case details
   </div>
   <input class="govuk-input govuk-!-width-one-half" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint" value="Judge Goodwin (judge.goodwin@example.com)">
 </div>
+<!--
 <div class="govuk-inset-text govuk-!-width-three-quarters">
   <strong>The person you have selected requires specific acces to this case.</strong><br>
   On the next screen you will choose how long they will be allocated this role and have access to the case.
-</div>
+</div> -->
   <div class="govuk-button-group">
   {{ govukButton({
     text: "Continue",
