--- a/app/views/workallocation/pages/wa-PA-00467-2017-arex.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arex.html
@@ -105,13 +105,13 @@ Case details
         <table class="govuk-table ">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19">Name</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Role</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Access type</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Location</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Start</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">End</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 "></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19"  style="width: 250px;">Name</th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;">Role</th>
+            <!--        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " >Access type</th> -->
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Location</th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Start</th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">End</th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 100px;"></th>
             </tr>
         </thead>
 
@@ -119,23 +119,23 @@ Case details
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Philips</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td>
+              <!--      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
-
+<!--
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Nordman</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing judge</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td>
+          
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell"><a href="wa-PA-00467-2017-arj-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
-
+-->
 
         </tbody>
     </table>
@@ -144,13 +144,13 @@ Case details
         <table class="govuk-table ">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19">Name</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Role</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Access type</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Location</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Start</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">End</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 "></th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19"  style="width: 250px;">Name</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;">Role</th>
+          <!--        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " >Access type</th> -->
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Location</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Start</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">End</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 100px;"></th>
             </tr>
         </thead>
 
@@ -160,7 +160,7 @@ Case details
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bisa Butler</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case manager</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td>
+            <!--        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
@@ -176,14 +176,14 @@ Case details
         <table class="govuk-table ">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Name</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19">Type</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 250px;">Name</th>
+
 
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">User type</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Location</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Notes</th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 "style="width: 400px;"">Notes</th>
+
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Added</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 "></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 50px;"></th>
             </tr>
         </thead>
 
@@ -191,14 +191,12 @@ Case details
 
 
             <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="width: auto;">
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >
 Judge Birch</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="width: auto;">Other</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >Judicial</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >	The case has been remitted from the Upper Tribunal and requires a different judge.</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >DD/MM/YYYY </td>
 
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="width: auto;">Judicial</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="width: 415px;">	The case has been remitted from the Upper Tribunal and requires a different judge.</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="width: auto;">DD/MM/YYYY </td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="width: auto;"></td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Delete</a></td>
 
             </tr>
