--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-6.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-6.html
@@ -58,7 +58,7 @@ Case details
               </a>
             </dd>
           </div>
-          <div class="govuk-summary-list__row">
+  <!--        <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Type of exclusion
             </dt>
@@ -70,7 +70,7 @@ Case details
                 Change<span class="govuk-visually-hidden">Selected judge</span>
               </a>
             </dd>
-          </div>
+          </div> -->
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
