--- a/app/views/workallocation/pages/wa-PA-00467-2017-hjchk.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-hjchk.html
@@ -8,37 +8,25 @@
 Case details
 {% endblock %}
 {% block beforeContent %}
-<a href="wa-PA-00467-2017-ajhadur-fpj" class="govuk-back-link">Back</a>
+<a href="wa-PA-00467-2017-hjdur" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<h2 class="govuk-heading-l">Allocate a judicial role</h2>
-<h2 class="govuk-heading-m">Check your allocation</h2>
+<h2 class="govuk-heading-l">Allocate a hearing judge</h2>
+<h2 class="govuk-heading-m">Check your answers</h2>
 <div id="event-name-hint" class="govuk-hint">
   Check the information below carefully.
 </div>
         <dl class="govuk-summary-list govuk-!-margin-bottom-9 govuk-!-width-three-quarters">
-          <div class="govuk-summary-list__row">
+
+          <div class="govuk-summary-list__row" >
             <dt class="govuk-summary-list__key" style="width: 350px;">
-              Type of role
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Hearing judge
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="wa-PA-00467-2017-aj-fpj">
-                Change<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Who the role will be allocated to
+              Choose who to allocate the role to
             </dt>
             <dd class="govuk-summary-list__value">
             Allocate to another judge
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="wa-PA-00467-2017-ajh-fpj">
+              <a class="govuk-link" href="wa-PA-00467-2017-hj">
                 Change<span class="govuk-visually-hidden">Selected judge</span>
               </a>
             </dd>
@@ -46,57 +34,44 @@ Case details
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Person
+              Find the person
             </dt>
             <dd class="govuk-summary-list__value">
               <p class="govuk-body">Judge Goodwin</p>
               <p class="govuk-body">judge.goodwin@example.com</p>
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="wa-PA-00467-2017-ajha-fpj">
+              <a class="govuk-link" href="wa-PA-00467-2017-hjha">
                 Change<span class="govuk-visually-hidden"> contact details</span>
               </a>
             </dd>
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Role starts
+              Duration of role
             </dt>
             <dd class="govuk-summary-list__value">
-              <p class="govuk-body">DD/MM/YYYY</p>
+              <p class="govuk-body">Indefinite</p>
 
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="wa-PA-00467-2017-ajhadur-fpjc">
+              <a class="govuk-link" href="wa-PA-00467-2017-hjdur">
                 Change<span class="govuk-visually-hidden"> contact details</span>
               </a>
             </dd>
           </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Role ends
-            </dt>
-            <dd class="govuk-summary-list__value">
-              <p class="govuk-body">DD/MM/YYYY</p>
 
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="wa-PA-00467-2017-ajhadur-fpjc">
-                Change<span class="govuk-visually-hidden"> contact details</span>
-              </a>
-            </dd>
-          </div>
         </dl>
 
   <div class="govuk-button-group">
   {{ govukButton({
     text: "Confirm allocation",
-href: "wa-PA-00467-2017-arj-fpj",
+href: "wa-PA-00467-2017-hjc",
 
     classes: "govuk-!-margin-right-3"
   }) }}
 
-  <p><a class="govuk-body" href="wa-PA-00467-2017-ar-fpj">Cancel</a></p>
+  <p><a class="govuk-body" href="wa-PA-00467-2017-all">Cancel</a></p>
 </div>
 </form>
 
