--- a/app/views/workallocation/pages/wa-PA-00467-2017-loj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-loj.html
@@ -17,7 +17,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">Success</span>
-    You've reallocated a role. You may need to reassign associated tasks too.
+    You've allocated a role.
   </div>
 </div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
@@ -48,17 +48,17 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="wa-PA-00467-2017-t">
           Tasks
         </a>
       </li>
        <li class="govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="wa-PA-00467-2017-ar">
           Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-a">
           Overview
         </a>
       </li>
@@ -116,23 +116,14 @@ Case details
         </thead>
 
         <tbody class="govuk-table__body">
-            <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Philips</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
-            <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-            </tr>
-
+      
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Goodwin</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing judge</td>
-          <!--      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
+            <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY</td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
 
@@ -160,7 +151,7 @@ Case details
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bisa Butler</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case manager</td>
-            <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
+              <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
