--- a/app/views/workallocation/pages/wa-PA-00467-2017-none.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-none.html
@@ -92,36 +92,11 @@ Case details
             <h2 class="govuk-heading-m">Active tasks</h2>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-            <p class="govuk-body"><strong>Allocate a hearing judge</strong> <span class="hmcts-badge_right">{{govukTag({
-        text: "dd/mm/yyyy",
-        classes: "govuk-tag--grey"
-        })}}</span></p>
-            <dl class="govuk-summary-list govuk-summary-list--no-border">
-              <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                  <span style="padding-left:25px">Assigned to</span>
-                </dt>
-                <dd class="govuk-summary-list__value">
-                  Judge Beech
-                </dd>
-              </div>
-              <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                  <span style="padding-left:25px">Manage</span>
-                </dt>
-                <dd class="govuk-summary-list__value">
-                  <a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a>
-                </dd>
-              </div>
-              <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                  <span style="padding-left:25px">Next steps</span>
-                </dt>
-                <dd class="govuk-summary-list__value">
-                  <a href="wa-PA-00467-2017-hj">Allocate a hearing judge</a>
-                </dd>
-              </div>
-            </dl>
+
+            <p class="govuk-body">There are no active tasks for this case.</p>
+
+
+
           </div>
         </div>
         <div class="govuk-grid-column-one-third">
