--- a/app/views/workallocation/pages/wa-PA-00467-2017-tra-case.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-tra-case.html
@@ -72,16 +72,16 @@ Case details
                 value: "phone",
                 text: "7 days ",
                 hint: {
-              text: "Access starts from today and ends at midnight 7 days from now."
+              text: "Starts from today and ends at midnight 7 days from now."
             }
             },
 
 
             {
               value: "phone",
-              text: "Indefinitely",
+              text: "Indefinite",
               hint: {
-            text: "Access starts from today and lasts while the case is open."
+            text: "Starts from today and lasts while the case is open."
           }
           },
 
@@ -89,7 +89,7 @@ Case details
                 value: "phone",
                 text: "Another period",
                 hint: {
-              text: "You’ll need to provide both a start and end date for access to the case."
+              text: "You’ll need to provide both a start and end date for the role."
             },
                 conditional: {
                   html: setDuration
