--- a/app/views/workallocation/pages/wa-available-tasks-o.html
+++ b/app/views/workallocation/pages/wa-available-tasks-o.html
@@ -63,7 +63,7 @@ My work
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Protection</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Review respondent evidence</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Allocate a hearing judge</td>
           <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">{{govukTag({
 text: "dd/mm/yyyy",
 classes: "govuk-tag--red"
@@ -74,7 +74,7 @@ classes: "govuk-tag--red"
 
         <tr class="govuk-table__row">
 
-          <td colspan="7" class="right"> <a href="/workallocation/pages/wa-available-tasks-a" class="right">Assign to me</a> <a href="wa-PA-00467-2017-ta" class="right_tl">Assign to me and go to task</a></td>
+          <td colspan="7" class="right"> <a href="/workallocation/pages/wa-available-tasks-a" class="right">Assign to me</a> <a href="wa-PA-00467-2017-all" class="right_tl">Assign to me and go to task</a></td>
         </tr>
         <tr class="govuk-table__row">
 
