--- a/app/views/workallocation/pages/wa-available-tasks.html
+++ b/app/views/workallocation/pages/wa-available-tasks.html
@@ -63,7 +63,7 @@ My work
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Allocate a hearing judge</td>
           <td class="govuk-table__cell">{{govukTag({
 text: "dd/mm/yyyy",
 classes: "govuk-tag--red"
