--- a/app/views/workallocation/pages/wa-myaccess-new-assv.html
+++ b/app/views/workallocation/pages/wa-myaccess-new-assv.html
@@ -108,7 +108,7 @@ My work
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell">
-          <a href="#" class="right_m">View</a>
+          <a href="#" class="right_m">Review</a>
           </td>
         </tr>
 
