--- a/app/views/workallocation/pages/wa-myaccess-new-re.html
+++ b/app/views/workallocation/pages/wa-myaccess-new-re.html
@@ -67,7 +67,7 @@ My work
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong></strong></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell">
-          <a href="wa-myaccess-tcrvd" class="right_m">View</a>
+          <a href="wa-myaccess-tcrvd" class="right_m">Review</a>
           </td>
         </tr>
 
