--- a/app/views/workallocation/pages/wa-mycases-new-o.html
+++ b/app/views/workallocation/pages/wa-mycases-new-o.html
@@ -52,23 +52,23 @@ My work
         <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
         <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
         <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
+      <!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th> -->
         <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
         <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">End</button></th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: auto;" aria-sort="none"></th>
+        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 100px;" aria-sort="none"></th>
       </tr>
     </thead>
     <tbody class="govuk-table__body">
       <tr class="govuk-table__row">
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-1549"><strong>Enndermen Wise</strong></a></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="wa-1549"><strong>Enndermen Wise</strong></a></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><strong>Immigration and Asylum</strong></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><strong>Protection</strong></td>
         <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Lead Judge</strong></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>DD/MM/YYYY</strong></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"> </td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><strong>Lead Judge</strong></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><strong>DD/MM/YYYY</strong></td>
+        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"> </td>
         <!--  <td class="govuk-table__cell">18 Apr 2021</td> -->
-        <td class="govuk-table__cell"><a href="wa-mycases-new" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
+        <td class="govuk-table__cell" style="border-bottom: 1px solid #fff"><a href="wa-mycases-new" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
       </tr>
 
       <tr class="govuk-table__row">
