--- a/app/views/caseaccess/pages/PA-00467-2017-tra.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tra.html
@@ -71,14 +71,14 @@ Case details
         value: "phone",
         text: "7 days ",
         hint: {
-      text: "Access starts from today and ends at midnight 7 days from now."
+      text: "Starts from today and ends at midnight 7 days from now."
     }
     },
 
 
     {
       value: "phone",
-      text: "Indefinitely",
+      text: "Indefinite",
       hint: {
     text: "Access starts from today and lasts while the case is open."
   }
