--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajhan.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajhan.html
@@ -7,10 +7,12 @@
 {% block pageTitle %}
 Case details
 {% endblock %}
-
+{% block beforeContent %}
+<a href="wa-PA-00467-2017-ajhn" class="govuk-back-link">Back</a>
+{% endblock %}
 {% block content %}
 <span class="govuk-caption-l">Hearing judge</span>
-<h2 class="govuk-heading-l">Reallocate role</h2>
+<h2 class="govuk-heading-l">Allocate a judicial role</h2>
 
 <div class="govuk-form-group">
   <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
@@ -18,7 +20,7 @@ Case details
     </label>
   </h2>
   <div id="event-name-hint" class="govuk-hint">
-    Type the name of the  person and select them.
+    Type the name of the person and select them.
   </div>
   <input class="govuk-input govuk-!-width-one-third" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
 </div>
@@ -26,11 +28,11 @@ Case details
   <div class="govuk-button-group">
   {{ govukButton({
     text: "Continue",
-    href: "wa-PA-00467-2017-real-dur",
+    href: "wa-PA-00467-2017-ajndur",
     classes: "govuk-!-margin-right-3"
   }) }}
 
-  <p><a class="govuk-body" href="wa-PA-00467-2017-arj-o">Cancel</a></p>
+  <p><a class="govuk-body" href="wa-PA-00467-2017-noj">Cancel</a></p>
 </div>
 </form>
 
