--- a/app/views/workallocation/pages/wa-PA-00467-2017-ar-fpj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ar-fpj.html
@@ -97,13 +97,13 @@ Case details
         <table class="govuk-table ">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19">Name</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Role</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Access type</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Location</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Start</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">End</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 "></th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19"  style="width: 300px;">Name</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;">Role</th>
+          <!--        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " >Access type</th> -->
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Location</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Start</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">End</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 100px;"></th>
             </tr>
         </thead>
 
@@ -111,7 +111,7 @@ Case details
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Philips</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td>
+              <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
@@ -127,13 +127,13 @@ Case details
         <table class="govuk-table ">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19">Name</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Role</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Access type</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Location</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Start</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">End</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 "></th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19"  style="width: 300px;">Name</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;">Role</th>
+          <!--        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " >Access type</th> -->
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Location</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Start</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">End</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 100px;"></th>
             </tr>
         </thead>
 
@@ -143,7 +143,7 @@ Case details
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bisa Butler</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case manager</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td>
+          <!--      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
