--- a/app/views/workallocation/pages/wa-PA-00467-2017-arj-o.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arj-o.html
@@ -97,13 +97,13 @@ Case details
         <table class="govuk-table ">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19">Name</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Role</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Access type</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Location</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Start</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">End</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 "></th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19"  style="width: 300px;">Name</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;">Role</th>
+          <!--        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " >Access type</th> -->
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Location</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Start</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">End</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 100px;"></th>
             </tr>
         </thead>
 
@@ -111,7 +111,7 @@ Case details
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Philips</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td>
+            <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
@@ -121,7 +121,7 @@ Case details
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Judge Nordman</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Hearing judge</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Standard access</td>
+          <!--      <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"></td>
@@ -130,7 +130,7 @@ Case details
 
             <tr class="govuk-table__row">
 
-              <td colspan="7" class="right"> <a href="wa-PA-00467-2017-real" class="right">Reallocate</a> <a href="#" class="right_tl">Remove allocation</a></td>
+              <td colspan="6" class="right"> <a href="wa-PA-00467-2017-real" class="right">Reallocate</a> <a href="#" class="right_tl">Remove allocation</a></td>
             </tr>
         </tbody>
     </table>
@@ -139,13 +139,13 @@ Case details
         <table class="govuk-table ">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19">Name</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Role</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Access type</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Location</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Start</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">End</th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 "></th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19"  style="width: 300px;">Name</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;">Role</th>
+          <!--        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " >Access type</th> -->
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Location</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Start</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">End</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 100px;"></th>
             </tr>
         </thead>
 
@@ -155,7 +155,7 @@ Case details
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bisa Butler</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case manager</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td>
+            <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
