--- a/app/views/workallocation/pages/wa-PA-00467-2017-noj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-noj.html
@@ -11,15 +11,7 @@ Case details
 
 
 {% block content %}
-<div class="hmcts-banner hmcts-banner--success">
-  <svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
-    <path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z" />
-  </svg>
-  <div class="hmcts-banner__message">
-    <span class="hmcts-banner__assistive">Success</span>
-    You've reallocated a role. You may need to reassign associated tasks too.
-  </div>
-</div>
+
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
   <div class="" style="display: flex; justify-content: space-between; ">
     <div>
@@ -48,17 +40,17 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="wa-PA-00467-2017-t">
           Tasks
         </a>
       </li>
        <li class="govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="wa-PA-00467-2017-ar">
           Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="#">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-a">
           Overview
         </a>
       </li>
@@ -102,45 +94,16 @@ Case details
       <div>
   <h2 class="govuk-heading-l">Roles and access</h2>
         <h2 class="govuk-heading-m">Judiciary</h2>
-        <table class="govuk-table ">
-        <thead class="govuk-table__head">
-            <tr class="govuk-table__row">
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19"  style="width: 300px;">Name</th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;">Role</th>
-          <!--        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " >Access type</th> -->
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Location</th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Start</th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">End</th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 100px;"></th>
-            </tr>
-        </thead>
+        <dl class="govuk-summary-list">
+          <div class="govuk-summary-list__row">
 
-        <tbody class="govuk-table__body">
-            <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Philips</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
-            <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-            </tr>
-
-            <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Goodwin</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing judge</td>
-          <!--      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-            </tr>
-
-
-        </tbody>
-    </table>
-    <p><a href="#" class="govuk-link">Allocate a role</a></p>
-        <h2 class="govuk-heading-m">Caseworkers</h2>
+            <dd class="govuk-summary-list__value">
+              There are no judicial roles for this case.
+            </dd>
+          </div>
+        </dl
+    <p><a href="wa-PA-00467-2017-ajn" class="govuk-link">Allocate a role</a></p>
+        <h2 class="govuk-heading-m">Legal Ops</h2>
         <table class="govuk-table ">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
@@ -160,7 +123,7 @@ Case details
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bisa Butler</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case manager</td>
-            <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
+          <!--      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
